# bare-metal-rust

./: Cargo.toml  README.md
.cargo/: config.toml
docs/: bare-metal-rust-architecture.md  bare-metal-rust-batteries.md  bare-metal-rust.md  crate-evolution.md  plan-options-incremental.md
src/: main.rs
