[package]
name = "bare_metal_rust"
version = "0.1.0"
authors = ["Dan Thornton <dan.thornton+Git@thornton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = "0.5.0"
esp-println   = { version = "0.3.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.4.0", features = ["esp32c3", "panic-handler", "print-uart"] }
riscv-rt = { version = "0.11", optional = true }

[features]
default = ["rt"]
rt = ["riscv-rt"]
