[package]
name = "bare_metal_rust"
version = "0.1.0"
authors = ["Dan Thornton <dan.thornton+Git@thornton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-rust-board = { path = "../esp-rust-board-bsp" }
esp32c3-hal   = { version = "0.5.0" }
esp-backtrace = { version = "0.4.0", features = ["esp32c3", "exception-handler", "panic-handler", "print-uart"] }
esp-println   = { version = "0.3.0", features = ["esp32c3"] }
icm42670      = { version = "0.1.1",  optional = true }
riscv-rt      = { version = "0.11",   optional = true }
shared-bus    = { version = "0.2.4",  optional = true }
shtcx         = { version = "0.11.0", optional = true }
smart-leds    = { version = "0.3.0",  optional = true }
owo-colors = "3.5.0"
micromath = "2.0.0"

[features]
default  = ["sensors", "smartled", "rt"]
sensors  = ["icm42670", "shared-bus", "shtcx"]
smartled = ["esp32c3-hal/smartled", "smart-leds"]
rt = ["riscv-rt"]
